# Connexio

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: release.yml
assets/hooks/: connexio-claude-hook.ps1  connexio-opencode-plugin.js  connexio-pi-hook.ts
scripts/: generate-icons.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: clipboard.rs  discord.rs  explorer.rs  git.rs  mod.rs  notification.rs  pinned.rs  projects.rs  session.rs  settings.rs  shell.rs  ssh.rs  tasks.rs  theme.rs  updater.rs  workspace.rs
src-tauri/src/modules/pty/: manager.rs
src-tauri/src/scripts/: profile.ps1
src/main/: ai-providers.ts  git.ts  index.ts  notification-ipc.ts  notification-server.ts  notification-store.ts  preload.ts  project.ts  session.ts  settings.ts  ssh.ts  tasks.ts  terminal.ts  theme.ts  themes-default.ts  updater.ts  workspace.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/components/: AIIntegrationsSettings.tsx  AddProjectModal.tsx  AppFooter.tsx  CommandTimer.tsx  ConfirmDialog.tsx  CwdIndicator.tsx  DiffModal.tsx  DiffViewer.tsx  GitStatusBar.tsx  NotificationBell.tsx  NotificationToast.tsx  SSHPanel.tsx  SearchPanel.tsx  SettingsModal.tsx  ShellPicker.tsx  Sidebar.tsx  SourcePanel.tsx  TaskPanel.tsx  Terminal.tsx  TerminalContextMenu.tsx  TerminalLayer.tsx  TitleBar.tsx  (+5 more)
src/shared/: types.ts
(+26 files in other folders)
